<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bg_green"
        android:text="@string/temp"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-condensed"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_temperature"
        android:textSize="24sp"
        android:text="@string/city"/>

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_below="@id/city"
        android:contentDescription="@string/img_icon"/>

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/city"
        android:layout_marginStart="60dp"
        android:background="@drawable/bg_humidity"
        android:gravity="center"
        android:text="@string/humid"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp" />

</RelativeLayout>