<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/desc" />

    <AutoCompleteTextView
        android:id="@+id/autoComplete"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/img"
        android:layout_alignParentTop="true"
        android:layout_marginTop="156dp"
        android:inputType="textPersonName"
        android:layout_below="@id/desc"
        android:hint="@string/hint"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/autoComplete"
        android:layout_marginEnd="54dp"
        android:onClick="buttonClicked"
        android:text="@string/button" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img"
        android:textSize="20sp"
        android:text="" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/autoComplete"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/img_icon"/>

</RelativeLayout>